--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* background-color: black; */
+    background-color: black;
   }
   
   a {
